[package]
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>", "Rust Embedded Community Developers"]
categories = ["embedded", "no-std"]
description = "A basic SD/MMC driver for Embedded Rust."
edition = "2021"
keywords = ["sdcard", "mmc", "embedded", "fat32"]
license = "MIT OR Apache-2.0"
name = "embedded-fat"
readme = "README.md"
repository = "https://github.com/rust-embedded-community/embedded-sdmmc-rs"
version = "0.5.0"

[dependencies]
byteorder = {version = "1", default-features = false}
defmt = {version = "0.3", optional = true}
heapless = "0.7"
log = {version = "0.4", default-features = false, optional = true}

[dev-dependencies]
env_logger = "0.9"
hex-literal = "0.3"
flate2 = "1.0"
sha256 = "1.4"
chrono = "0.4"
tokio = {version = "1.32.0", features = ["full"]}
async-recursion = "1.0.5"

[features]
default = ["log"]
defmt-log = ["defmt"]
